psp-migration/restrict-runtimeClassName/02-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restrict-runtimeclassname
---
apiVersion: node.k8s.io/v1
kind: RuntimeClass
metadata:
  name: prodclass 
handler: prodconfig
---
apiVersion: node.k8s.io/v1
kind: RuntimeClass
metadata:
  name: expclass 
handler: expconfig
---
apiVersion: node.k8s.io/v1
kind: RuntimeClass
metadata:
  name: fooclass 
handler: fooconfig
