psp-migration/restrict-runtimeClassName/restrict-runtimeClassName.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-runtimeclass
  annotations:
    policies.kyverno.io/title: Restrict runtimeClass
    policies.kyverno.io/category: PSP Migration
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.10.0
    kyverno.io/kubernetes-version: "1.24"
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/description: >-
      The runtimeClass field of a Pod spec defines which container engine runtime should be used.
      In the previous Pod Security Policy controller, defining restrictions on which classes were allowed
      was permitted. Limiting runtime classes to only those which have been defined can prevent
      unintended running states or Pods which may not come online. This policy restricts the runtimeClass
      field to the values `prodclass` or `expclass`.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: prodclass-or-expclass
    match:
      any:
      - resources:
          kinds:
          - Pod
    preconditions:
      all:
      - key: "{{request.operation || 'BACKGROUND'}}"
        operator: Equals
        value: CREATE
    validate:
      message: Only the runtime classes prodclass or expclass may be used.
      pattern:
        =(spec):
          =(runtimeClassName): "prodclass | expclass"
