psp-migration/restrict-runtimeClassName/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-runtimeclass
policies:
- restrict-runtimeClassName.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: restrict-runtimeclass
  resources:
  - badpod01
  result: fail
  rule: prodclass-or-expclass
- kind: Pod
  policy: restrict-runtimeclass
  resources:
  - goodpod01
  - goodpod02
  - goodpod03
  result: pass
  rule: prodclass-or-expclass
